# MIDI_Wizard

./: .gitignore  CMakeLists.txt  MIDI_Wizard.sln  README.md
App/: App.vcxproj  CMakeLists.txt  MIDI_Wizard.vcxproj.filters  MainWindow.cpp  MainWindow.h  Object.cpp  ObjectManager.h  ObjectRenderer.h  UI_Element_midi_note.cpp  UI_Element_midi_note.h  UI_Element_midi_track.cpp  UI_Element_midi_track.h  gui.cpp  imgui.ini  main.cpp  viewport.cpp  viewport.h
App/libs/imgui/: main_demo.cpp
App/res/: test_type0.mid  test_type0_NoteAtStart.mid  test_type0_NoteAtStart_2.mid  test_type0_NoteAtStart_Offset.mid  test_type0_NoteAtStart_andEnd.mid  test_type0_spaced.mid  test_type0_spaced_CH2.MID  test_type1.mid  test_type1_MultiTrack.mid  test_type1_MultiTrack_names.mid
App/src/: IniManager.cpp  IniManager.h  MainWindow.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  ObjectRenderer.cpp  UI_Element_midi_note.cpp  UI_Element_midi_note.h  UI_Element_midi_track.h  gui.cpp  gui.h  main.cpp  viewport.cpp  viewport.h
App/src/CORE/: ObjectManager.cpp  ObjectManager.h  core.cpp  core.h  core_globals.cpp  core_globals.h  helpers.cpp  helpers.h  midi.cpp  midi.h  victor.cpp  victor.h
App/src/CORE/libs/: minitrace.h  utils.cpp  utils.h
App/src/GUI/: MainWindow.cpp  MainWindow.h  Object.cpp  Object.h  UI_Element_midi_note.cpp  UI_Element_midi_note.h  UI_Element_midi_track.cpp  UI_Element_midi_track.h  gui.cpp  gui.h  viewport.cpp  viewport.h  window_handler.cpp  window_handler.h
CORE/: CMakeLists.txt
CORE/libs/: minitrace.cpp
CORE/libs/imgui/: main_demo.cpp
CORE/libs/tinyfiledialogs/: hello.c  hello_wchar_t.c  tinyfiledialogs.c
CORE/src/Core/: MidiParser.cpp  MidiParser.h  MidiTrack.cpp  MidiTrack.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  core.cpp  helpers.h  math.h  midi.cpp  midi.h  midi_datatypes.h  midi_globals.h  midi_track.cpp  midi_track.h  victor.h
